# autoware_camera_lidar_calibrator

./: README.md
autoware_camera_lidar_calibrator/: CMakeLists.txt  README.md
autoware_camera_lidar_calibrator/data/: 20191209_190748_autoware_lidar_camera_calibration.yaml  20191211_135728_autoware_lidar_camera_calibration.yaml  20200218_235918_autoware_lidar_camera_calibration.yaml  sample_F120_902.yaml  test.yaml
autoware_camera_lidar_calibrator/data/bag/bag4/: eval.ply  info.txt
autoware_camera_lidar_calibrator/data/bag/query_local_clouds/: calib.txt  clouds.txt  gps_poses.txt  lidar.timestamps  lidar_gps_poses.txt  merged_aligned_1577858786277213_2.000000.ply  merged_aligned_accumulated_1577858786277213_2.000000.ply  merged_aligned_accumulated_1577858834473511_20.000000.ply  query_1577858786277213.ply  query_1577858834473511.ply
autoware_camera_lidar_calibrator/launch/: camera_lidar_calibration.launch  evaluate_camera_lidar_calibration.launch
autoware_camera_lidar_calibrator/rviz/: calib.rviz  vis.rviz
autoware_camera_lidar_calibrator/scripts/: glob_cloud_files.py
autoware_camera_lidar_calibrator/src/autoware_camera_lidar_calibration/: camera_lidar_calibration_node.cpp
autoware_camera_lidar_calibrator/src/bag_creator/: bag_creator_from_image_and_ply.cpp  convert_from_txt_to_ply.cpp  create_bag_from_ply.cpp  query_cloud_poses.cpp  query_local_clouds.cpp  visualize_cloud_dynamically.cpp  visualize_cloud_ply.cpp
autoware_msgs/: CMakeLists.txt  package.xml
points2image/: CMakeLists.txt
